src/QFrame.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQFrameCtor(void * parent, int  f);
EXTERNC void * SCWQFrameCtor(void * parent, int  f);
EXTERNC int32_t QWQFrameframeStyle(void * obj);
EXTERNC void QWQFramesetFrameStyle(void * obj, int32_t  arg1);
EXTERNC int32_t QWQFrameframeWidth(void * obj);
EXTERNC void * QWQFramesizeHint(void * obj);
EXTERNC int QWQFrameframeShape(void * obj);
EXTERNC void QWQFramesetFrameShape(void * obj, int  arg1);
EXTERNC int QWQFrameframeShadow(void * obj);
EXTERNC void QWQFramesetFrameShadow(void * obj, int  arg1);
EXTERNC int32_t QWQFramelineWidth(void * obj);
EXTERNC void QWQFramesetLineWidth(void * obj, int32_t  arg1);
EXTERNC int32_t QWQFramemidLineWidth(void * obj);
EXTERNC void QWQFramesetMidLineWidth(void * obj, int32_t  arg1);
EXTERNC void * QWQFrameframeRect(void * obj);
EXTERNC void QWQFramesetFrameRect(void * obj, void * arg1);
EXTERNC void QWvalidateCB_QFrame(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQFrameDtor(void *);
EXTERNC void SCWQFrameDtor(void *);